src/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Category__c.Type__c</field>
                <operation>equals</operation>
                <value>Expense</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tranaction__c</fullName>
        <label>Tranaction</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Amount__c</columns>
        <columns>Entry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>